@@ -52,12 +52,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 385)
-(Parent-Version lpmud 3-3 384)
-(Version-Log "Assignements to multi-level struct references (a->b->c) didn't work.")
+(Project-Version lpmud 3-3 386)
+(Parent-Version lpmud 3-3 385)
+(Version-Log "Small chunks freed during consolidation weren't reused.")
 (New-Version-Log
 "")
-(Checkin-Time "Sun, 02 Feb 2003 17:30:27 -0700")
+(Checkin-Time "Tue, 04 Feb 2003 23:42:26 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -94,7 +94,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.58 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.448 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.449 644))
   (HISTORY (lpmud/f/49_HISTORY 1.298 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -270,7 +270,7 @@
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.31 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.99 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.13 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.64 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.65 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.3 644))
   (src/structs.c (lpmud/d/b/6_structs.c 1.7 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.1 644))
@@ -1126,7 +1126,7 @@
   (doc/efun/present (lpmud/p/21_present 1.4 644))
   (doc/efun/present_clone (lpmud/t/11_present_cl 1.4 644))
   (doc/efun/previous_object (lpmud/l/34_previous_o 1.3.1.5 644))
-  (doc/efun/printf (lpmud/p/22_printf 1.3 644))
+  (doc/efun/printf (lpmud/p/22_printf 1.4 644))
   (doc/efun/process_string (lpmud/p/23_process_st 1.6 644))
   (doc/efun/program_name (lpmud/m/10_program_na 1.6 644))
   (doc/efun/program_time (lpmud/m/17_program_ti 1.3 644))
